--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -16,6 +16,7 @@
 
 html {
     box-sizing: border-box;
+    height: 100%;
 }
 
 *,
@@ -32,7 +33,7 @@ body {
     margin: 0;
     padding: 0 0;
     color: #fff;
-    max-height: 100%;
+    height: 100%;
 }
 
 a {
@@ -396,6 +397,7 @@ input[type=checkbox] {
 
     .hero--small_text {
         font-size: 1rem;
+        width: 80%;
         margin-bottom: 3.4rem;
     }
 
