remove container box shadow on smaller screens

--- a/Pricing Card/style.css
+++ b/Pricing Card/style.css
@@ -105,6 +105,7 @@ ul {
         margin: 3vh auto;
         flex-direction: column;
         justify-items: center;
+        box-shadow: none;
     }
 
     .card {
