--- a/Stats Card/style.css
+++ b/Stats Card/style.css
@@ -113,6 +113,7 @@ a {
 .btn {
     padding: 1.2rem 1.5rem;
     background: hsla(0, 0%, 100%, 0.079);
+    border-radius: 5px;
     text-transform: uppercase;
     font-size: .85rem;
 }
