--- a/Food Recipe UI/style.css
+++ b/Food Recipe UI/style.css
@@ -44,6 +44,7 @@ ul {
     max-width: 80rem;
     padding: 1.5% 3%;
     margin: 0 auto;
+    filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.045));
 }
 
 .ui {
@@ -100,7 +101,7 @@ header {
 }
 
 .input-search input {
-    background: url("./assets/img/filter-icon.svg") no-repeat 14.4rem 1px, url("./assets/img/search-icon.svg") no-repeat .7rem #fff;
+    background: url("./assets/img/filter-icon.svg") no-repeat 95% 2.5px, url("./assets/img/search-icon.svg") no-repeat .7rem, #fff;
     background-size: 3.25rem, 2rem;
     width: 98%;
     margin: 0 auto 1rem;
@@ -114,6 +115,7 @@ header {
 
 ::placeholder {
     color: rgb(158, 158, 158);
+    font-size: .8rem;
 }
 
 
