feat: add second ui contents

--- a/Food Recipe UI/style.css
+++ b/Food Recipe UI/style.css
@@ -20,7 +20,7 @@ html {
 
 body {
     background: #eaede5;
-    color: rgba(6, 1, 37, 0.918);
+    color: rgb(5, 0, 31);
     font-family: 'HelveticaNeue-Bold', sans-serif;
     margin: 0;
     overflow-x: hidden;
@@ -49,7 +49,6 @@ ul {
 
 .ui {
     background: #f0f2ec;
-    padding: 0 0 1.35rem;
     border-radius: 16px;
 }
 
@@ -121,6 +120,7 @@ header {
 
 .latest-recipe {
     padding-left: 1.6rem;
+    margin-bottom: 1.73rem;
 }
 
 .latest-recipe h2 {
@@ -215,10 +215,12 @@ header {
     padding: .7rem 0;
     position: relative;
     border-radius: 15px;
+    height: 9.7rem;
 }
 
 .week-image_wrapper img {
     width: 60%;
+    height: 100%;
     display: block;
     margin: 0 auto;
 }
@@ -237,4 +239,131 @@ header {
     color: hsla(0, 48%, 13%, 0.38);
     margin: 0;
     font-size: .9rem;
+}
+
+
+
+/* Second UI */
+
+.recipe-splash {
+    width: 100%;
+    height: 17rem;
+    margin-bottom: 1.35rem;
+}
+
+.recipe-splash img {
+    height: 100%;
+    width: 100%;
+}
+
+.recipe-details {
+    background: hsla(0, 0%, 100%, 0.568);
+
+    border-radius: 33px 33px 0 0;
+}
+
+.recipe-details_top {
+    padding: 1.5rem 0 0 1.45rem;
+}
+
+
+.difficulty-details {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 2.35rem;
+}
+
+
+
+.difficulty-details h2 {
+    font-size: 1rem;
+}
+
+.prep-stages {
+    display: flex;
+    border-top: 1px solid rgb(198 198 208 / 35%);
+    border-bottom: 1px solid rgb(198 198 208 / 35%);
+    padding: .28rem 0 .3rem;
+    width: 90%;
+    margin-right: auto;
+
+}
+
+.prep-stage {
+    text-align: center;
+    width: 100%;
+}
+
+.prep-image_wrapper {
+    width: 60%;
+    height: 3rem;
+    margin: 0 auto;
+}
+
+.prep-image_wrapper img {
+    width: 63%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.prep-stage:nth-child(3)>.prep-image_wrapper>img {
+    width: 75%;
+}
+
+.prep-stage p:nth-of-type(1) {
+    font-size: .9rem;
+    margin: 0;
+}
+
+.prep-stage p:nth-of-type(2) {
+    font-size: .6rem;
+    color: #656563;
+    font-family: 'Circular Spotify Tx T Med', sans-serif;
+    opacity: .9;
+    margin-top: .45rem;
+}
+
+.utensils h3 {
+    font-size: 1rem;
+}
+
+.utensils p {
+    color: hsl(60, 1%, 39%);
+    font-family: 'Circular Spotify Tx T Med', sans-serif;
+    font-size: .72rem;
+    line-height: 1.7;
+    margin-bottom: .8rem;
+}
+
+.recipe-details_bottom {
+    background: rgba(255, 255, 255, 0.644);
+    padding: 1.1rem 2rem 1.9rem 1.45rem;
+    border-radius: 38px 38px 0 0;
+}
+
+.nutrition-details h4 {
+    font-size: 1rem;
+    margin: 0 0 1.2rem;
+}
+
+.nutrition-columns {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+}
+
+.nutrition+.nutrition {
+    border-left: 1px solid rgb(198 198 208 / 35%);
+}
+
+.nutrition h5 {
+    font-size: .87rem;
+    margin: 0;
+}
+
+.nutrition p {
+    color: hsl(60, 1%, 39%);
+    font-family: 'Circular Spotify Tx T Med', sans-serif;
+    font-size: .65rem;
+    margin: .6rem 0 0;
 }
