--- a/Food Recipe UI/style.css
+++ b/Food Recipe UI/style.css
@@ -206,7 +206,7 @@ header {
 }
 
 .week-recipe {
-    padding: 0 1.4rem 0 1.6rem;
+    padding: 0 1.4rem 1.49rem 1.6rem;
 }
 
 .week-image_wrapper {
