--- a/Food Recipe UI/style.css
+++ b/Food Recipe UI/style.css
@@ -62,7 +62,7 @@ ul {
     grid-template-columns: repeat(auto-fit, minmax(100px, 22rem));
     grid-gap: 3rem;
     justify-content: center;
-    width: 90%;
+    width: 95%;
     max-width: 80rem;
     padding: 1.5% 3%;
     margin: 0 auto;
@@ -77,7 +77,7 @@ ul {
 .status-bar {
     display: flex;
     justify-content: space-between;
-    padding: 0 1rem 0 1.6rem;
+    padding: 0 4% 0 8.5%;
 }
 
 .left-bar,
@@ -92,6 +92,7 @@ ul {
 
 .right-bar {
     padding: 0;
+    margin-top: .9rem;
 }
 
 .status-bar_icons img {
@@ -108,7 +109,7 @@ ul {
 }
 
 header {
-    padding: 0 1.4rem 0 1.6rem;
+    padding: 0 7% 0 8.5%;
 }
 
 .menu-icon-wrapper img {
@@ -140,7 +141,7 @@ header {
 }
 
 .latest-recipe {
-    padding-left: 1.6rem;
+    padding-left: 8.5%;
     margin-bottom: 1.73rem;
 }
 
@@ -157,7 +158,7 @@ header {
 }
 
 .recipe-card {
-    background: hsla(0, 0%, 100%, 0.568);
+    background: hsla(0, 0%, 100%, 0.569);
     padding: .9rem .8rem .7rem;
     border-radius: 14px;
     text-align: center;
@@ -227,7 +228,7 @@ header {
 }
 
 .week-recipe {
-    padding: 0 1.4rem 1.49rem 1.6rem;
+    padding: 0 7% 1.49rem 8.5%;
 }
 
 .week-image_wrapper {
@@ -277,7 +278,7 @@ header {
 }
 
 .recipe-details {
-    background: hsla(0, 0%, 100%, 0.568);
+    background: hsla(0, 0%, 100%, 0.569);
     border-radius: 33px 33px 16px 16px;
 }
 
@@ -338,6 +339,10 @@ header {
     margin-top: .45rem;
 }
 
+.utensils {
+    padding-right: .8rem;
+}
+
 .utensils h3 {
     font-size: 1rem;
 }
@@ -345,13 +350,14 @@ header {
 .utensils p {
     color: hsl(60, 1%, 39%);
     font-family: 'Circular Spotify Tx T Med', sans-serif;
-    font-size: .72rem;
+    font-size: calc(0.72rem + ((1vw - 1rem) * 0.0516));
+    min-height: 0vw;
     line-height: 1.7;
     margin-bottom: .8rem;
 }
 
 .recipe-details_bottom {
-    background: rgba(255, 255, 255, 0.644);
+    background: hsla(0, 0%, 100%, 0.839);
     padding: 1.1rem 2rem 1.9rem 1.45rem;
     border-radius: 38px 38px 16px 16px;
 }
@@ -409,6 +415,7 @@ header {
 .kitchen-story h1 {
     font-family: 'Futura-Md', sans-serif;
     font-size: 1.44rem;
+    letter-spacing: .05rem;
     margin: 0;
     opacity: .9;
 }
@@ -439,5 +446,9 @@ header {
 
     .recipe-splash img {
         object-fit: contain;
+    }
+
+    .recipe-card {
+        padding-top: 0;
     }
 }
